Splits debezium into a pure supplier and a streaming source
  - Remove any SCS related dependecies from teh supplier.
  - Supplier uses Sinks.Many.

--- a/applications/source/debezium-source/pom.xml
+++ b/applications/source/debezium-source/pom.xml
@@ -131,9 +131,9 @@
 						<name>debezium</name>
 						<type>source</type>
 						<version>${project.version}</version>
-						<configClass>org.springframework.cloud.fn.supplier.debezium.DebeziumConsumerConfiguration.class
+						<configClass>org.springframework.cloud.fn.supplier.debezium.DebeziumReactiveConsumerConfiguration.class
 						</configClass>
-						<functionDefinition>debezium</functionDefinition>
+						<functionDefinition>debeziumSupplier</functionDefinition>
 
 						<properties>
 							<spring.autoconfigure.exclude>org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration</spring.autoconfigure.exclude>
