--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -14,8 +14,15 @@
     <groupId>org.springframework.cloud.fn</groupId>
 	<artifactId>spring-functions-parent</artifactId>
 	<packaging>pom</packaging>
-
+	<properties>
+		<protobuf.version>3.19.6</protobuf.version>
+	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protobuf.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>config-common</artifactId>
