--- a/functions/supplier/debezium-supplier/src/main/resources/application.properties
+++ b/functions/supplier/debezium-supplier/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.cloud.stream.kafka.default.producer.messageKeyExpression=headers['cdc_key'].bytes
+spring.cloud.stream.kafka.default.producer.messageKeyExpression=headers['debezium_key'].bytes
