--- a/applications/source/debezium-source/pom.xml
+++ b/applications/source/debezium-source/pom.xml
@@ -158,6 +158,11 @@
 									<groupId>org.springframework.cloud.fn</groupId>
 									<artifactId>debezium-supplier</artifactId>
 								</dependency>
+								<dependency>
+									<groupId>org.springframework.cloud.stream.app</groupId>
+									<artifactId>stream-applications-composite-function-support</artifactId>
+									<version>${stream-apps-core.version}</version>
+								</dependency>
 							</dependencies>
 						</maven>
 					</application>
