--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -143,7 +143,7 @@ jobs:
       jre_version: ${{ env.JRE_DEFAULT }}
   core:
     if: ${{ github.repository == 'spring-cloud/stream-applications' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     needs:
       - parameters
     steps:
