--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -681,7 +681,7 @@ jobs:
             echo "::notice ::updating next dev versions to ${{ needs.parameters.outputs.next_dev_version }}"
             $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.next_dev_version }}" 
             echo "::notice ::setting released version to next dev version ${{ needs.parameters.outputs.next_dev_version }}"
-            $ROOT_DIR/next-dev-version.sh
+            ./next-dev-version.sh
             git commit -a -m "Next development version ${{ needs.parameters.outputs.next_dev_version }}"
             git push -v origin 
           popd > /dev/null
