Move debezium builder into standalone function common project
 - Move the DebeziumEngineBuilderAutoConfiguration and META-INF configurations to new function project: debezium-autoconfigure.
 - Introduce the EmbeddedEngineExecutorService helper class for help DebezuimEngine implementations.
 - Move the relevat tests from debezium-supplier to the debeizum-autoconfigure.
 - Add detailer README documentation.
 - Adjust the debeizum-supplier and debezium-source configurations.
 - Clean the related tests.

 Resolves #462

--- a/functions/common/pom.xml
+++ b/functions/common/pom.xml
@@ -12,6 +12,7 @@
 
 	<modules>
         <module>config-common</module>
+		<module>debezium-auto-configuration</module>
         <module>aws-s3-common</module>
 		<module>file-common</module>
 		<module>ftp-common</module>
