--- a/functions/common/pom.xml
+++ b/functions/common/pom.xml
@@ -12,7 +12,7 @@
 
 	<modules>
         <module>config-common</module>
-		<module>debezium-auto-configuration</module>
+		<module>debezium-autoconfigure</module>
         <module>aws-s3-common</module>
 		<module>file-common</module>
 		<module>ftp-common</module>
