--- a/spring-cloud-dataflow-apps-generator-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
@@ -9,16 +10,17 @@
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-dataflow-apps-plugin-parent</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.version>3.6.3</maven.version>
-    <maven.plugin.version>3.6.0</maven.plugin.version>
+    <maven.version>3.9.2</maven.version>
+    <maven.plugin.version>3.9.0</maven.plugin.version>
     <jmustache.version>1.15</jmustache.version>
-    <spring.version>5.2.8.RELEASE</spring.version>
+    <spring.version>6.0.8</spring.version>
+    <commons.io.version>2.12.0</commons.io.version>
   </properties>
 
   <dependencies>
@@ -51,6 +53,13 @@
       <version>${maven.plugin.version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>${commons.io.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
