GH-265: Add Kafka Consumer and Sink
Fixes https://github.com/spring-cloud/stream-applications/issues/265

* Make `kafkaConsumer` based on the Spring for Apache Kafka auto-configuration
and Spring Integration channel adapter, essentially `KafkaProducerMessageHandler`
* Make this `KafkaConsumerConfiguration` as an auto-configuration by itself.
* Expose those simple properties required by the `KafkaProducerMessageHandlerSpec`
* Add `kafka-sink` module based on the `kafka-consumer`

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -16,6 +16,7 @@
         <module>file-sink</module>
         <module>ftp-sink</module>
         <module>jdbc-sink</module>
+        <module>kafka-sink</module>
         <module>log-sink</module>
         <module>mongodb-sink</module>
         <module>mqtt-sink</module>
